--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-eslint": "^8.2.2",
     "eslint": "^4.19.1",
     "eslint-plugin-react": "^7.7.0",
+    "istanbul": "^1.1.0-alpha.1",
     "jasmine": "^3.4.0"
   }
 }
